# GenAILanguage

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit.md
examples/: hello.gai
genai_lang/: __init__.py  cli.py  parser.py  runtime.py
tests/: test_examples.py  test_golden.py  test_parser.py  test_runtime.py
tests/golden/: parser_expected.json  parser_script.gal  runtime_expected.json  runtime_script.gal
